--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pacman </title>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <h1> PAC-MAN </h1>
-
-    <div class="grid">
-
-    </div>
-
-    <script src="index.js"></script>
-</body>
+<html>
+    <head>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+        <h1>Pacman</h1>
+        <h3> <span id="score"> Score: </span> </h3>
+        <div class="grid">
+           
+        </div>
+        <script src="index.js"></script>
+    </body>
 </html>
